added page registration and updated styles

--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cart</title>
+        <title>Registration</title>
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
@@ -84,91 +84,63 @@
                 <div class="container">
                     <div class="heading__body">
                         <div class="heading__h2">
-                            <h2>New arrivals</h2>
+                            <h2>Registration</h2>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <section class="inCart">
+            <section class="registration">
                 <div class="container">
-                    <div class="inCart__body">
-                        <div class="inCart__goods">
-                            <article class="inCart__goods__item">
-                                <div class="inCart__goods__img">
-                                    <img src="images/inCart-1.jpg" alt="image product">
+                    <div class="registration__body">
+                        <div class="registration__body__userData">
+                            <form action="#">
+                                <h3>Your Name</h3>
+                                <input type="text" minlength="4" maxlength="20" placeholder="First Name" name="First Name" required>
+                                <input type="text" minlength="4" maxlength="20" placeholder="Last Name" name="Last Name" required>
+                                <div class="gender">
+                                    <label>
+                                        <input type="radio" name="gender" value="Male" required> Male
+                                    </label>
+                                    <label>
+                                        <input type="radio" name="gender" value="Female" required> Female
+                                    </label>
                                 </div>
 
-                                <div class="inCart__goods__content">
-                                    <h3>
-                                        Mango  people <br> 
-                                        t-shirt
-                                    </h3>
-                                    
-                                    <ul>
-                                        <li>Price:       <span class="price">$300</span></li>
-                                        <li>Color:       <span>Red</span></li>
-                                        <li>Size:        <span>XI</span></li>
-                                        <li>Quantity:    <input type="number" min="1" max="10" value="2"> </li>
-                                    </ul>
-                                </div>
+                                <h3>Login details</h3>
+                                <input type="email" minlength="4" maxlength="20" placeholder="Email" name="email" required>
+                                <input type="password" minlength="8"maxlength="20" placeholder="Password" name="password" required>
 
-                                <div class="close">
-                                    <span> &#10006; </span>
-                                </div>
-                            </article>
+                                <p>
+                                    Please use 8 or more characters, with at least 1 number and a 
+                                    mixture of uppercase and lowercase letters
+                                </p>
 
-                            <article class="inCart__goods__item">
-                                <div class="inCart__goods__img">
-                                    <img src="images/inCart-2.jpg" alt="image product">
+                                <div class="registration__body__btn">
+                                    <button type="submit" class="btn--pink">
+                                        Join now
+                                        <svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.54 0.208095C11.6058 0.142131 11.684 0.0897967 11.77 0.0540883C11.8561 0.01838 11.9483 0 12.0415 0C12.1347 0 12.2269 0.01838 12.313 0.0540883C12.399 0.0897967 12.4772 0.142131 12.543 0.208095L16.7929 4.458C16.8589 4.5238 16.9112 4.60196 16.9469 4.68802C16.9826 4.77407 17.001 4.86632 17.001 4.95949C17.001 5.05266 16.9826 5.14491 16.9469 5.23097C16.9112 5.31702 16.8589 5.39518 16.7929 5.46098L12.543 9.71089C12.41 9.84389 12.2296 9.91861 12.0415 9.91861C11.8534 9.91861 11.673 9.84389 11.54 9.71089C11.407 9.57788 11.3323 9.39749 11.3323 9.2094C11.3323 9.0213 11.407 8.84091 11.54 8.70791L15.2898 4.95949L11.54 1.21107C11.474 1.14528 11.4217 1.06711 11.386 0.981059C11.3503 0.895005 11.3319 0.802752 11.3319 0.709584C11.3319 0.616415 11.3503 0.524162 11.386 0.438109C11.4217 0.352055 11.474 0.273891 11.54 0.208095Z" fill="white"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 4.95948C0 4.77162 0.0746263 4.59146 0.207462 4.45862C0.340297 4.32579 0.52046 4.25116 0.708318 4.25116H15.583C15.7708 4.25116 15.951 4.32579 16.0838 4.45862C16.2167 4.59146 16.2913 4.77162 16.2913 4.95948C16.2913 5.14734 16.2167 5.3275 16.0838 5.46033C15.951 5.59317 15.7708 5.6678 15.583 5.6678H0.708318C0.52046 5.6678 0.340297 5.59317 0.207462 5.46033C0.0746263 5.3275 0 5.14734 0 4.95948Z" fill="white"/>
+                                        </svg> 
+                                    </button>
                                 </div>
-
-                                <div class="inCart__goods__content">
-                                    <h3>
-                                        Mango  people <br> 
-                                        t-shirt
-                                    </h3>
-                                    
-                                    <ul>
-                                        <li>Price:       <span class="price">$300</span></li>
-                                        <li>Color:       <span>Red</span></li>
-                                        <li>Size:        <span>XI</span></li>
-                                        <li>Quantity:    <input type="number" min="1" max="10" value="2"> </li>
-                                    </ul>
-                                </div>
-
-                                <div class="close">
-                                    <span> &#10006; </span>
-                                </div>
-                            </article>
-
-                            <div class="inCart__goods__control">
-                                <button>Clear shopping cart</button>
-                                <button>Continue shopping</button>
-                            </div>
+                            </form>
                         </div>
 
-                        <div class="inCart__shipping">
-                            <div class="inCart__shipping__address">
-                                <form action="">
-                                    <h3>Shipping address</h3>
-                                    <input type="text" required placeholder="Bangladesh">
-                                    <input type="text" required value="State">
-                                    <input type="text" required value="Postcode / Zip">
-                                    <button type="submit">Get a quote</button>
-                                </form>
-                            </div>
-
-                            <div class="inCart__shipping__payment">
-                                <p class="subTotal">Sub total <span> $900 </span></p>
-                                <p class="grandTotal">Grand total <span> $900 </span></p>
-
-                                <hr>
-
-                                <div class="cart__btn">
-                                    <a href="#" class="btn--pink">Proceed to checkout</a>
-                                </div>
-                            </div>
+                        <div class="registration__body__perks">
+                            <h3>Loyalty has its perks</h3>
+                            <p>
+                                Get in on the loyalty program where you can earn points and 
+                                unlock serious perks. Starting with these as soon as you join:
+                            </p>
+                            <ul>
+                                <li><span> 15% off welcome offer </span></li>
+                                <li><span> Free shipping, returns and exchanges on all orders </span></li>
+                                <li><span> $10 off a purchase on your birthday </span></li>
+                                <li><span> Early access to products </span></li>
+                                <li><span> Exclusive offers & rewards </span></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
