--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 </div>
 
                 <div class="header__right">
-                    <a href="#" id="booster">
+                    <a href="#" id="burger" class="burger">
                         <svg width="32" height="23" viewBox="0 0 32 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" />
                         </svg>
                     </a>
 
-                    <a href="registration.html">
+                    <a href="registration.html" class="reg-icon" id="regIcon">
                         <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M14.5 19.937C19 19.937 22.656 15.464 22.656 9.968C22.656 4.472 19 0 14.5 0C13.3631 0.0217413 12.2463 0.303398 11.2351 0.823397C10.2239 1.34339 9.34507 2.08794 8.66602 3C7.12663 4.99573 6.30819 7.45381 6.34399 9.974C6.34399 15.465 10 19.937 14.5 19.937ZM14.5 1.813C18 1.813 20.844 5.472 20.844 9.969C20.844 14.466 17.998 18.125 14.5 18.125C11.002 18.125 8.15603 14.465 8.15503 9.969C8.15403 5.473 11 1.813 14.5 1.813ZM20.844 18.125C20.6036 18.125 20.373 18.2205 20.203 18.3905C20.033 18.5605 19.9375 18.7911 19.9375 19.0315C19.9375 19.2719 20.033 19.5025 20.203 19.6725C20.373 19.8425 20.6036 19.938 20.844 19.938C22.526 19.9399 24.1386 20.6088 25.3279 21.7982C26.5172 22.9875 27.1861 24.6 27.188 26.282C27.1875 26.5221 27.0918 26.7523 26.922 26.9221C26.7522 27.0918 26.5221 27.1875 26.282 27.188H2.71997C2.47985 27.1875 2.24975 27.0918 2.07996 26.9221C1.91016 26.7523 1.81449 26.5221 1.81396 26.282C1.81608 24.6001 2.48517 22.9877 3.67444 21.7985C4.86371 20.6092 6.47608 19.9401 8.15796 19.938C8.39824 19.938 8.62868 19.8425 8.79858 19.6726C8.96849 19.5027 9.06396 19.2723 9.06396 19.032C9.06396 18.7917 8.96849 18.5613 8.79858 18.3914C8.62868 18.2215 8.39824 18.126 8.15796 18.126C5.99541 18.1279 3.92201 18.9875 2.39258 20.5164C0.863144 22.0453 0.00264777 24.1185 0 26.281C0.000794067 27.0019 0.287502 27.693 0.797241 28.2027C1.30698 28.7125 1.99811 28.9992 2.71899 29H26.282C27.0027 28.9989 27.6936 28.7121 28.2031 28.2024C28.7126 27.6927 28.9992 27.0017 29 26.281C28.9974 24.1187 28.1372 22.0457 26.6083 20.5168C25.0793 18.9878 23.0063 18.1276 20.844 18.125Z"
@@ -34,7 +34,7 @@
                         </svg>
                     </a>
 
-                    <a href="cart.html">
+                    <a href="cart.html" class="cart-icon" id="cartIcon">
                         <svg width="42" height="37" viewBox="0 0 42 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M26.2009 37C25.5532 36.9738 24.9415 36.6948 24.4972 36.2227C24.0529 35.7506 23.8114 35.1232 23.8245 34.475C23.8376 33.8269 24.1043 33.2097 24.5673 32.7559C25.0303 32.3022 25.6527 32.048 26.301 32.048C26.9493 32.048 27.5717 32.3022 28.0347 32.7559C28.4977 33.2097 28.7644 33.8269 28.7775 34.475C28.7906 35.1232 28.549 35.7506 28.1047 36.2227C27.6604 36.6948 27.0488 36.9738 26.401 37H26.2009ZM6.75293 34.32C6.75293 33.79 6.91011 33.2718 7.20459 32.8311C7.49907 32.3904 7.91764 32.0469 8.40735 31.844C8.89705 31.6412 9.43594 31.5881 9.95581 31.6915C10.4757 31.7949 10.9532 32.0502 11.328 32.425C11.7028 32.7998 11.9581 33.2773 12.0615 33.7972C12.1649 34.317 12.1118 34.8559 11.9089 35.3456C11.7061 35.8353 11.3626 36.2539 10.9219 36.5483C10.4812 36.8428 9.96304 37 9.43298 37C9.08087 37.0003 8.73212 36.9311 8.40674 36.7966C8.08136 36.662 7.78569 36.4646 7.53662 36.2158C7.28755 35.9669 7.09001 35.6713 6.9552 35.3461C6.82039 35.0208 6.75098 34.6721 6.75098 34.32H6.75293ZM10.553 28.686C10.2935 28.6868 10.0409 28.6024 9.83411 28.4457C9.62727 28.2891 9.47758 28.0689 9.40796 27.819L4.57495 10.364H1.18201C0.868521 10.364 0.567859 10.2395 0.346191 10.0178C0.124523 9.79614 0 9.49549 0 9.18201C0 8.86852 0.124523 8.56787 0.346191 8.3462C0.567859 8.12454 0.868521 8.00001 1.18201 8.00001H5.46301C5.7225 7.99919 5.97504 8.08372 6.18176 8.24057C6.38848 8.39742 6.53784 8.61788 6.60693 8.86801L11.4399 26.323H24.6179L29.001 16.275H14.401C14.2428 16.2796 14.0854 16.2524 13.9379 16.1951C13.7904 16.1377 13.6559 16.0513 13.5424 15.9411C13.4288 15.8308 13.3386 15.6989 13.277 15.5532C13.2154 15.4074 13.1836 15.2508 13.1836 15.0925C13.1836 14.9343 13.2154 14.7776 13.277 14.6319C13.3386 14.4861 13.4288 14.3542 13.5424 14.2439C13.6559 14.1337 13.7904 14.0473 13.9379 13.9899C14.0854 13.9326 14.2428 13.9054 14.401 13.91H30.814C31.0097 13.91 31.2022 13.9587 31.3744 14.0517C31.5465 14.1448 31.6928 14.2793 31.7999 14.443C31.9078 14.6073 31.9734 14.7957 31.9908 14.9914C32.0083 15.1872 31.9771 15.3842 31.9 15.565L26.495 27.977C26.4026 28.1876 26.251 28.3668 26.0585 28.4927C25.866 28.6186 25.641 28.6858 25.411 28.686H10.553Z"
@@ -53,31 +53,33 @@
 
         <main class="main">
             <div class="main__menu" id="main__menu">
-                <h3>Menu</h3>
-                <div class="categories">
-                    <dl>
-                        <dt>Man</dt>
-                            <dd><a href="#"> Accessories </a> </dd>
-                            <dd><a href="#"> Bags </a> </dd>
-                            <dd><a href="#"> Denim </a> </dd>
-                            <dd><a href="#"> T-Shirts </a> </dd>
-                        <dt>Woman</dt>
-                            <dd><a href="#"> Accessories </a> </dd>
-                            <dd><a href="#"> Jackets & Coats </a> </dd>
-                            <dd><a href="#"> Polos </a> </dd>
-                            <dd><a href="#"> T-Shirts </a> </dd>
-                            <dd><a href="#"> Shirts </a> </dd>
-                        <dt>Kids</dt>
-                            <dd><a href="#"> Accessories </a> </dd>
-                            <dd><a href="#"> Jackets & Coats </a> </dd>
-                            <dd><a href="#"> Polos </a> </dd>
-                            <dd><a href="#"> T-Shirts </a> </dd>
-                            <dd><a href="#"> Shirts </a> </dd>
-                            <dd><a href="#"> Bags </a> </dd>
-                    </dl>
-                </div>
+                <div class="direction--ltr">
+                    <h3>Menu</h3>
+                    <div class="categories">
+                        <dl>
+                            <dt>Man</dt>
+                                <dd><a href="#"> Accessories </a> </dd>
+                                <dd><a href="#"> Bags </a> </dd>
+                                <dd><a href="#"> Denim </a> </dd>
+                                <dd><a href="#"> T-Shirts </a> </dd>
+                            <dt>Woman</dt>
+                                <dd><a href="#"> Accessories </a> </dd>
+                                <dd><a href="#"> Jackets & Coats </a> </dd>
+                                <dd><a href="#"> Polos </a> </dd>
+                                <dd><a href="#"> T-Shirts </a> </dd>
+                                <dd><a href="#"> Shirts </a> </dd>
+                            <dt>Kids</dt>
+                                <dd><a href="#"> Accessories </a> </dd>
+                                <dd><a href="#"> Jackets & Coats </a> </dd>
+                                <dd><a href="#"> Polos </a> </dd>
+                                <dd><a href="#"> T-Shirts </a> </dd>
+                                <dd><a href="#"> Shirts </a> </dd>
+                                <dd><a href="#"> Bags </a> </dd>
+                        </dl>
+                    </div>
 
-                <div class="close" id="close"> &times; </div>
+                    <div class="close" id="close"> &times; </div>
+                </div>
             </div>
 
             <section class="hiro">
@@ -99,26 +101,28 @@
             <section class="catalog">
                 <div class="container">
                     <div class="catalog__body">
-                        <div class="catalog__item">
-                            <img src="images/catlog-img1.jpg" alt="catalog image">
-                            <p>
-                                30% OFF <br>
-                                <span class="text--pink">FOR WOMEN</span> 
-                            </p>
-                        </div>
-                        <div class="catalog__item">
-                            <img src="images/catlog-img2.jpg" alt="catalog image">
-                            <p>
-                                HOT DEAL <br>
-                                <span class="text--pink">FOR MEN</span> 
-                            </p>
-                        </div>
-                        <div class="catalog__item">
-                            <img src="images/catlog-img3.jpg" alt="catalog image">
-                            <p>
-                                NEW ARRIVALS <br>
-                                <span class="text--pink">FOR KIDS</span> 
-                            </p>
+                        <div class="block--nowrap">
+                            <div class="catalog__item">
+                                <img src="images/catlog-img1.jpg" alt="catalog image">
+                                <p>
+                                    30% OFF <br>
+                                    <span class="text--pink">FOR WOMEN</span> 
+                                </p>
+                            </div>
+                            <div class="catalog__item">
+                                <img src="images/catlog-img2.jpg" alt="catalog image">
+                                <p>
+                                    HOT DEAL <br>
+                                    <span class="text--pink">FOR MEN</span> 
+                                </p>
+                            </div>
+                            <div class="catalog__item">
+                                <img src="images/catlog-img3.jpg" alt="catalog image">
+                                <p>
+                                    NEW ARRIVALS <br>
+                                    <span class="text--pink">FOR KIDS</span> 
+                                </p>
+                            </div>
                         </div>
                         <div class="catalog__item">
                             <img src="images/catlog-img4.jpg" alt="catalog image">
@@ -161,7 +165,7 @@
                                             <path d="M21.876 22.2662C21.921 22.2549 21.9423 22.2339 21.96 22.2129C21.9678 22.2037 21.9756 22.1946 21.9835 22.1855C22.02 22.1438 22.0233 22.0553 22.0224 22.0105C22.0092 21.9044 21.9185 21.8315 21.8412 21.8315C21.8375 21.8315 21.8336 21.8317 21.8312 21.8318C21.7531 21.8372 21.6653 21.9409 21.6719 22.0625C21.6813 22.1793 21.7675 22.2662 21.8392 22.2662H21.876ZM8.21954 22.2599C8.31873 22.2599 8.39935 22.1655 8.39935 22.0496C8.39935 21.9341 8.31873 21.8401 8.21954 21.8401C8.12042 21.8401 8.03973 21.9341 8.03973 22.0496C8.03973 22.1655 8.12042 22.2599 8.21954 22.2599ZM21.9995 24.2662C21.9517 24.2662 21.8878 24.2662 21.8392 24.2662C20.7017 24.2662 19.7567 23.3545 19.6765 22.198C19.5964 20.9929 20.4937 19.9183 21.6953 19.8364C21.7441 19.8331 21.7928 19.8315 21.8412 19.8315C22.9799 19.8315 23.9413 20.7324 24.019 21.8884C24.0505 22.4915 23.8741 23.0612 23.4898 23.5012C23.1055 23.9575 22.5764 24.2177 21.9995 24.2662ZM8.21954 24.2599C7.01532 24.2599 6.03973 23.2709 6.03973 22.0496C6.03973 20.8291 7.01532 19.8401 8.21954 19.8401C9.42371 19.8401 10.3994 20.8291 10.3994 22.0496C10.3994 23.2709 9.42371 24.2599 8.21954 24.2599ZM21.1984 17.3938H9.13306C8.70013 17.3938 8.31586 17.1005 8.20331 16.6775L4.27753 2.24768H1.52173C0.993408 2.24768 0.560547 1.80859 0.560547 1.27039C0.560547 0.733032 0.993408 0.292969 1.52173 0.292969H4.99933C5.43134 0.292969 5.81561 0.586304 5.9281 1.01025L9.85394 15.4391H20.5576L24.1144 7.13379H12.2578C11.7286 7.13379 11.2957 6.69373 11.2957 6.15649C11.2957 5.61914 11.7286 5.17908 12.2578 5.17908H25.5886C25.9091 5.17908 26.2141 5.34192 26.3896 5.61914C26.566 5.89539 26.5984 6.23743 26.4697 6.547L22.0795 16.807C21.9193 17.1653 21.5827 17.3938 21.1984 17.3938Z"/>
                                         </svg>
                                         Add to Cart
-                                    </ф>
+                                    </a>
                                 </div>
                         </article>
                         
